# ComfyUI-BasicOllama

./: BasicOllama.py  LICENSE  README.md  __init__.py  config.json  pyproject.toml
.github/workflows/: publish.yml
prompts/: FLUX.1-dev.txt  FLUXKontext.txt  Flux2-3Ref-Char-Style-Cloths.txt  Flux2-ColorHexAdvertising.txt  Flux2-GeneralPrompt.txt  Flux2-Img2Toy.txt  Flux2-Photo.txt  GeminiNanaBananaEdit.txt  Imagen4.txt  SDXL.txt  VideoGen.txt  Wan2.1-I2V.txt  Wan2.1-T2V.txt  Z-Image.txt
web/js/: BasicOllama.js
